fix mobile header items align

--- a/css/main.css
+++ b/css/main.css
@@ -359,6 +359,7 @@ html {
     width: calc(100% - 10px);
     top: 25px;
     flex-direction: column;
+    justify-content: flex-start;
   }
   .header__state_active {
     width: 100%;
@@ -371,7 +372,7 @@ html {
     overflow-y: scroll;
   }
   .header__controls {
-    padding-top: 90px;
+    padding-top: 146px;
     display: flex;
     flex-direction: column;
     align-items: center;
