--- a/css/scss/blocks/header.scss
+++ b/css/scss/blocks/header.scss
@@ -41,6 +41,7 @@
     width: calc(100% - 10px);
     top: 25px;
     flex-direction: column;
+    justify-content: flex-start;
 
     &__state_active {
       width: 100%;
@@ -54,7 +55,7 @@
     }
 
     &__controls {
-      padding-top: 90px;
+      padding-top: 146px;
       display: flex;
       flex-direction: column;
       align-items: center;
